testcases/invalid/semanticErr/sideeffect/sideEffectTypeErr01.wacc
# type mismatch: int <- bool

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = true;
  b += 3
end